--- a/css/main.css
+++ b/css/main.css
@@ -111,6 +111,10 @@ footer {
   margin: 0;
   padding: 0; }
 
+nav {
+  position: sticky;
+  top: 5px; }
+
 .login-button {
   background-color: #D32F2F;
   /* Rojo intenso */
@@ -665,8 +669,11 @@ footer {
 .prods__encabezado {
   height: 500px; }
 
-.prods__carrusel img {
-  border: solid 4px black; }
+.prods__carrusel {
+  height: 100%; }
+  .prods__carrusel img {
+    border: solid 4px black;
+    height: 500px !important; }
 
 .prods__info {
   height: 100%; }
@@ -680,15 +687,15 @@ footer {
       font-size: 25px;
       color: black;
       text-decoration: none !important;
-      background-color: red;
+      background-color: #bb0c0c;
       transition: all .2s;
       padding-inline: 5px;
       padding-block: 3px;
       border: solid 2px #181818;
       border-radius: 8px; }
       .prods__info .prods__volver a:hover {
-        color: white;
-        box-shadow: 0px 0px 10px darkred; }
+        box-shadow: 0px 0px 10px darkred;
+        filter: brightness(130%); }
   .prods__info h2 {
     height: 10%;
     font-size: 50px;
@@ -719,7 +726,7 @@ footer {
       border-radius: 8px;
       padding: 5px;
       height: 100%;
-      background-color: red;
+      background-color: #bb0c0c;
       transition: all .2s; }
       .prods__info .prods__contacto button a {
         font-size: 25px;
@@ -728,9 +735,8 @@ footer {
         transition: all .2s; }
       .prods__info .prods__contacto button:hover {
         transform: scale(1.05, 0.95);
-        box-shadow: 0px 0px 20px darkred; }
-        .prods__info .prods__contacto button:hover a {
-          color: white; }
+        box-shadow: 0px 0px 20px darkred;
+        filter: brightness(130%); }
 
 .prods__descripcion {
   padding-top: 10px;
@@ -740,6 +746,52 @@ footer {
   .prods__descripcion p {
     font-size: 22px;
     width: 80%; }
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .prods__main {
+    margin-top: 60px; }
+  .prods__encabezado {
+    height: 800px; }
+  .prods__carrusel {
+    height: 300px; }
+    .prods__carrusel img {
+      height: 300px !important; }
+  .prods__info {
+    height: 500px; }
+    .prods__info .prods__volver {
+      margin-inline: 0%;
+      transform: translateY(-380px); }
+    .prods__info .prods__contacto {
+      height: 50px; }
+      .prods__info .prods__contacto button a {
+        font-size: 16px;
+        color: black;
+        text-decoration: none !important; } }
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .prods__main {
+    margin-top: 60px; }
+  .prods__encabezado {
+    height: 1000px; }
+  .prods__carrusel {
+    height: 500px; }
+    .prods__carrusel img {
+      height: 500px !important; }
+  .prods__info {
+    height: 500px; }
+    .prods__info h2 {
+      margin-left: 20%; }
+    .prods__info table {
+      margin-left: 20%; }
+    .prods__info .prods__volver {
+      margin-inline: 0%;
+      transform: translateY(-580px); }
+    .prods__info .prods__contacto {
+      height: 50px; }
+      .prods__info .prods__contacto button a {
+        font-size: 16px;
+        color: black;
+        text-decoration: none !important; } }
 
 * {
   padding: 0;
