--- a/scss/_productos.scss
+++ b/scss/_productos.scss
@@ -16,8 +16,10 @@
 }
 
 .prods__carrusel{
+    height: 100%;
     img{
         border: solid 4px black;
+        height: 500px !important;
     }
 }
 
@@ -31,15 +33,15 @@
             overflow-x: hidden;
             box-shadow: 0px 0px 10px black;
             @include valoresFuente(25px, black, none);
-            background-color: red;
+            background-color: rgb(187, 12, 12);
             transition: all .2s;
             padding-inline: 5px;
             padding-block: 3px;
             border: solid 2px rgb(24, 24, 24);
             border-radius: 8px;
             &:hover{
-                color: white;
                 box-shadow: 0px 0px 10px darkred;
+                filter: brightness(130%);
             }
         }
     }
@@ -83,7 +85,7 @@
             border-radius: 8px;
             padding: 5px;
             height: 100%;
-            background-color: red;
+            background-color: rgb(187, 12, 12);;
             transition: all .2s;
             a{
                 @include valoresFuente(25px, black, none);
@@ -92,9 +94,7 @@
             &:hover{
                 transform: scale(1.05, 0.95);
                 box-shadow: 0px 0px 20px darkred;
-                a{    
-                    color: white;
-                }
+                filter: brightness(130%);
             }
         }
     }
@@ -108,5 +108,72 @@
     p{
         font-size: 22px;
         width: 80%;
+    }
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px){
+    .prods__main{
+        margin-top: 60px;
+    }
+    .prods__encabezado{
+        height: 800px;
+    }
+    .prods__carrusel{
+        height: 300px;
+        img{
+            height: 300px !important;
+        }
+    }
+    .prods__info{
+        height: 500px;
+        .prods__volver{
+            margin-inline: 0%;
+            transform: translateY(-380px);
+        }
+        .prods__contacto{
+        height: 50px;
+            button{
+                a{
+                    @include valoresFuente(16px, black, none)
+                }
+            }
+        }
+    }
+    
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px){
+    .prods__main{
+        margin-top: 60px;
+    }
+    .prods__encabezado{
+        height: 1000px;
+    }
+    .prods__carrusel{
+        height: 500px;
+        img{
+            height: 500px !important;
+        }
+    }
+    .prods__info{
+        height: 500px;
+        h2{
+            margin-left: 20%;
+        }
+        table{
+            margin-left: 20%;
+        }
+        .prods__volver{
+            margin-inline: 0%;
+            transform: translateY(-580px);
+        }
+        .prods__contacto{
+        height: 50px;
+            button{
+                a{
+                    @include valoresFuente(16px, black, none)
+                }
+            }
+        }
     }
 }
