--- a/css/main.css
+++ b/css/main.css
@@ -198,7 +198,7 @@ nav {
   height: 0px; }
 
 #hondaDatos1, #hondaDatos2, #hondaDatos3, #audiDatos1, #audiDatos2, #audiDatos3, #chevrDatos1, #chevrDatos2, #chevrDatos3, #renaDatos1, #renaDatos2, #renaDatos3, #fordDatos1, #fordDatos2, #fordDatos3, #fiatDatos1, #fiatDatos2, #fiatDatos3, #nissDatos1, #nissDatos2, #nissDatos3 {
-  display: none;
+  display: grid;
   text-align: center;
   height: 100%;
   color: white; }
@@ -490,6 +490,7 @@ nav {
     #ford #ford1:hover {
       scale: 1.2; }
       #ford #ford1:hover #fordDatos1 {
+        text-decoration: none;
         display: grid;
         grid-template-rows: repeat(4, 1fr) 2fr;
         grid-template-areas: "fordModelo1" "fordPrecio1" "fordToTerr1" "fordEnergia1" "fordDesc1";
@@ -508,6 +509,7 @@ nav {
     #ford #ford2:hover {
       scale: 1.2; }
       #ford #ford2:hover #fordDatos2 {
+        text-decoration: none;
         display: grid;
         grid-template-rows: repeat(4, 1fr) 2fr;
         grid-template-areas: "fordModelo2" "fordPrecio2" "fordToTerr2" "fordEnergia2" "fordDesc2";
@@ -526,6 +528,7 @@ nav {
     #ford #ford3:hover {
       scale: 1.2; }
       #ford #ford3:hover #fordDatos3 {
+        text-decoration: none;
         display: grid;
         grid-template-rows: repeat(4, 1fr) 2fr;
         grid-template-areas: "fordModelo3" "fordPrecio3" "fordToTerr3" "fordEnergia3" "fordDesc3";
@@ -695,7 +698,7 @@ nav {
   padding: 10px 0 10px 0;
   border-radius: 10px; }
   #marcas a {
-    width: 14%; }
+    width: 13%; }
     #marcas a input {
       width: 100%;
       font-size: 20px;
@@ -709,7 +712,14 @@ nav {
 #tieAut__Main {
   background: repeating-linear-gradient(45deg, #646464, #646464 25%, #737373 25%, #737373 50%); }
 
+#test {
+  text-decoration: none !important; }
+
 /*TRANSICIONES Y TRANSFORMACIONES*/
+* {
+  margin: 0;
+  padding: 0; }
+
 #mainC {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
