--- a/scss/_autos.scss
+++ b/scss/_autos.scss
@@ -102,7 +102,7 @@ $areasNiss:(
 }
 
 #hondaDatos1, #hondaDatos2, #hondaDatos3, #audiDatos1, #audiDatos2, #audiDatos3, #chevrDatos1, #chevrDatos2, #chevrDatos3, #renaDatos1, #renaDatos2, #renaDatos3, #fordDatos1, #fordDatos2, #fordDatos3, #fiatDatos1, #fiatDatos2, #fiatDatos3, #nissDatos1, #nissDatos2, #nissDatos3{
-    display: grid;
+    display: none;
     text-align: center;
     height: 100%;
     color: white;
