--- a/css/main.css
+++ b/css/main.css
@@ -172,6 +172,7 @@ nav {
 
 #tieAut__Grid {
   display: grid;
+  height: 2550px;
   grid-template-rows: repeat(7, 1fr);
   grid-template-areas: 'honda' 'audi' 'chevrolet' 'renault' 'ford' 'fiat' 'nissan';
   grid-row-gap: 20px; }
@@ -183,7 +184,7 @@ nav {
   grid-column-gap: 20px; }
 
 #hondaImg1, #hondaImg2, #hondaImg3, #audiImg1, #audiImg2, #audiImg3, #chevrImg1, #chevrImg2, #chevrImg3, #renaImg1, #renaImg2, #renaImg3, #fordImg1, #fordImg2, #fordImg3, #fiatImg1, #fiatImg2, #fiatImg3, #nissImg1, #nissImg2, #nissImg3 {
-  height: 0px; }
+  height: 0; }
 
 #hondaDatos1, #hondaDatos2, #hondaDatos3, #audiDatos1, #audiDatos2, #audiDatos3, #chevrDatos1, #chevrDatos2, #chevrDatos3, #renaDatos1, #renaDatos2, #renaDatos3, #fordDatos1, #fordDatos2, #fordDatos3, #fiatDatos1, #fiatDatos2, #fiatDatos3, #nissDatos1, #nissDatos2, #nissDatos3 {
   display: none;
@@ -705,7 +706,9 @@ nav {
   #tieAut__Main h4 {
     font-size: 20px; }
   #tieAut__Main p {
-    font-size: 10px; } }
+    font-size: 10px; }
+  #tieAut__Main img {
+    height: 307px; } }
 
 #mainC {
   display: grid;
