cree la informacion de porque vender tu auto aqui

--- a/css/main.css
+++ b/css/main.css
@@ -1089,11 +1089,15 @@ nav {
 #mainVA {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: auto auto auto;
-  grid-template-areas: 'h1va h1va h1va' 'formulariova formulariova formulariova' 'infova infova infova';
+  grid-template-rows: auto auto auto auto;
+  grid-template-areas: 'h1va h1va h1va' 'formulariova formulariova formulariova' 'h2va h2va h2va' 'infova1 infova2 infova3';
+  padding: 20px;
   justify-items: center;
-  align-items: center;
-  gap: 20px; }
+  align-items: start;
+  /* Alineación de inicio en cada celda */
+  gap: 20px;
+  box-sizing: border-box;
+  /* Incluye padding en el tamaño total */ }
 
 #contenedorvaformulario {
   grid-area: formulariova;
@@ -1115,7 +1119,8 @@ nav {
   opacity: 0;
   /* Comienza oculto */
   transform: translateY(-50px);
-  /* Comienza desplazado hacia arriba */ }
+  /* Comienza desplazado hacia arriba */
+  grid-area: formulariova; }
 
 .form-container.show {
   opacity: 1;
@@ -1180,6 +1185,22 @@ nav {
     transform: translateY(0); } }
 
 #h1va {
+  color: white; }
+
+#contenedorh2va {
+  grid-area: h2va;
+  color: white; }
+
+#infova1 {
+  grid-area: infova1;
+  color: white; }
+
+#infova2 {
+  grid-area: infova2;
+  color: white; }
+
+#infova3 {
+  grid-area: infova3;
   color: white; }
 
 * {
