añadidos a pag principal + arreglos de assets

--- a/css/main.css
+++ b/css/main.css
@@ -1150,7 +1150,8 @@ nav {
   box-sizing: border-box;
   /* Para asegurarse de que el padding no se agregue al tamaño del campo */ }
 
-.form-group input:focus, .form-group textarea:focus {
+.form-group input:focus,
+.form-group textarea:focus {
   outline: none;
   border-color: #ffffff;
   /* Cambio de borde cuando el campo está en foco */ }
@@ -1216,14 +1217,24 @@ nav {
   align-items: center;
   margin: 0;
   padding: 0; }
-  .cont-logo #logomain {
-    margin: 0;
-    padding: 0;
-    width: 30%;
-    height: 450px;
-    transition: all 1s; }
-    .cont-logo #logomain:hover {
-      rotate: 30deg; }
+
+@keyframes logo {
+  0% {
+    rotate: 0deg; }
+  20% {
+    rotate: 15deg; }
+  40% {
+    rotate: -15deg; }
+  100% {
+    rotate: 0deg; } }
+
+#logomain {
+  margin: 0;
+  padding: 0;
+  width: 30%;
+  height: 450px; }
+  #logomain:hover {
+    animation: logo 1s ease-in-out; }
 
 #titulo-empresa {
   position: absolute;
@@ -1232,14 +1243,22 @@ nav {
   font-size: 50px;
   letter-spacing: 1px;
   font-family: serif;
-  color: white; }
-
-.offcanvas-body ul li a {
   color: white;
-  font-size: 20px; }
-  .offcanvas-body ul li a:hover {
-    color: #acacac;
-    transition: color 0.5s; }
+  transition: all 0.5s; }
+  #titulo-empresa:hover {
+    transform: scale(1.2);
+    transition: all 0.5s; }
+
+.offcanvas-body {
+  position: sticky; }
+  .offcanvas-body .scrolled {
+    background-color: gray; }
+  .offcanvas-body ul li a {
+    color: white;
+    font-size: 20px; }
+    .offcanvas-body ul li a:hover {
+      color: #acacac;
+      transition: color 0.5s; }
 
 #menu-current-page {
   color: white; }
@@ -1268,35 +1287,36 @@ nav {
 #que-somos {
   margin: 0;
   padding: 0;
-  height: 880px;
+  height: 825px;
   justify-content: center; }
-  #que-somos h2 {
-    font-size: 70px;
-    font-family: monospace;
-    text-align: center;
-    color: white;
-    padding-top: 15%; }
-  #que-somos p {
-    color: white;
-    text-align: center;
-    font-family: monospace;
-    font-size: 20px;
-    width: 70%;
-    padding-bottom: 20%; }
-  #que-somos img {
-    filter: brightness(50%);
-    margin: 0;
-    padding: 0; }
 
-#foto-fondo {
+#que-somos__h2 {
+  font-size: 70px;
+  font-family: monospace;
+  text-align: center;
+  color: white;
+  padding-top: 15%; }
+
+#que-somos__p {
+  color: white;
+  text-align: center;
+  font-family: monospace;
+  font-size: 20px;
+  width: 70%;
+  padding-bottom: 20%; }
+
+#que-somos__foto-fondo {
   position: absolute;
-  z-index: -1; }
+  z-index: -1;
+  filter: brightness(50%);
+  margin: 0;
+  padding: 0; }
 
 .carousel-inner div img {
   width: 100%; }
 
 #productos-carousel {
-  padding: 2%;
+  padding: 5% 2%;
   background: repeating-linear-gradient(-45deg, #646464, #646464 20%, #737373 20%, #737373 40%); }
   #productos-carousel img {
     filter: brightness(80%);
@@ -1305,10 +1325,61 @@ nav {
       filter: brightness(90%);
       transition: filter 0.5s; }
   #productos-carousel button {
-    margin: 2%;
+    margin: 5% 2%;
     display: flex;
     background-color: none;
     transition: all 0.5s; }
     #productos-carousel button:hover {
       background-color: rgba(128, 128, 128, 0.452);
       transition: all 0.5s; }
+
+#comp-related {
+  width: 100%;
+  margin: 0;
+  padding: 0; }
+
+#comp-related__companies {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center; }
+
+#comp-related__companies--logo {
+  display: flex;
+  justify-content: center; }
+
+#comp-related__h2 {
+  text-align: center;
+  font-family: fantasy;
+  letter-spacing: 2px;
+  padding: 15px 0;
+  margin-bottom: 50px;
+  background-color: #b3b3b3; }
+
+#comp-related__companies--logo1, #comp-related__companies--logo2, #comp-related__companies--logo3 {
+  display: flex;
+  justify-content: center; }
+  #comp-related__companies--logo1 img, #comp-related__companies--logo2 img, #comp-related__companies--logo3 img {
+    width: 50%; }
+
+#comp-related__companies--t1, #comp-related__companies--t2, #comp-related__companies--t3 {
+  text-align: center;
+  color: white;
+  letter-spacing: 3px;
+  margin-bottom: 50px;
+  font-size: 60px;
+  font-family: serif;
+  font-weight: bold; }
+
+#comp-related__companies--p1, #comp-related__companies--p2, #comp-related__companies--p3 {
+  text-align: center;
+  color: #ededed;
+  font-size: 20px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  background-color: rgba(128, 128, 128, 0.498);
+  border-radius: 20px;
+  padding: 10px 5px;
+  margin-bottom: 100px; }
+
+#comp-related__companies--logo2 img {
+  width: 35%; }
