--- a/css/main.css
+++ b/css/main.css
@@ -856,6 +856,14 @@ nav {
   .pc {
     font-size: 16px; } }
 
+@keyframes deslizadoYaparicion {
+  form {
+    opacity: 0;
+    transform: translateX(-20px); }
+  to {
+    opacity: 1;
+    transform: translateX(0); } }
+
 .prods__main {
   border: solid 6px black;
   margin-inline: 2%;
@@ -930,7 +938,6 @@ nav {
         text-decoration: none !important;
         transition: all .2s; }
       .prods__info .prods__contacto button:hover {
-        transform: scale(1.05, 0.95);
         box-shadow: 0px 0px 20px darkred;
         filter: brightness(130%); }
 
@@ -943,9 +950,52 @@ nav {
     font-size: 22px;
     width: 80%; }
 
+.prods__btnVerMas[open] .prods__masInfo {
+  opacity: 1; }
+
 .prods__btnVerMas summary {
   list-style: none;
-  text-align: center; }
+  text-align: center;
+  font-size: 20px;
+  background-color: #bb0c0c;
+  box-shadow: 0px 0px 10px black;
+  border: solid 4px black;
+  border-radius: 15px;
+  transition: all .2s; }
+  .prods__btnVerMas summary:hover {
+    filter: brightness(130%);
+    box-shadow: 0px 0px 10px darkred; }
+  .prods__btnVerMas summary:active {
+    background-color: white;
+    box-shadow: 0px 0px 10px white; }
+
+.prods__masInfo {
+  opacity: 0;
+  transition: all .5s;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  border: solid 4px black;
+  border-radius: 15px;
+  padding: 15px;
+  margin-top: 30px; }
+  .prods__masInfo table {
+    margin-top: 80px;
+    margin-bottom: 80px;
+    width: 100%; }
+    .prods__masInfo table tr {
+      padding-left: 10px; }
+      .prods__masInfo table tr td {
+        width: 33%;
+        text-align: left;
+        font-size: 35px; }
+  .prods__masInfo h4 {
+    font-size: 30px;
+    text-align: center; }
+  .prods__masInfo video {
+    width: 70%;
+    border: solid 6px black;
+    border-radius: 10px; }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .prods__main {
