--- a/scss/_productos.scss
+++ b/scss/_productos.scss
@@ -4,6 +4,17 @@
     text-decoration: $deco !important;
 }
 
+@keyframes deslizadoYaparicion{
+    form{
+        opacity: 0;
+        transform: translateX(-20px);
+    }
+    to{
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
 .prods__main{
     border: solid 6px black;
     margin-inline: 2%;
@@ -92,7 +103,6 @@
                 transition: all .2s;
             }
             &:hover{
-                transform: scale(1.05, 0.95);
                 box-shadow: 0px 0px 20px darkred;
                 filter: brightness(130%);
             }
@@ -112,10 +122,61 @@
 }
 
 .prods__btnVerMas{
+    &[open] .prods__masInfo{
+        opacity: 1;
+    }
     summary{
         list-style: none;
         text-align: center;
+        font-size: 20px;
+        background-color: rgb(187, 12, 12);
+        box-shadow: 0px 0px 10px black;
+        border: solid 4px black;
+        border-radius: 15px;
+        transition: all .2s;
+        &:hover{
+            filter: brightness(130%);
+            box-shadow: 0px 0px 10px darkred;
+        }
+        &:active{
+            background-color: white;
+            box-shadow: 0px 0px 10px white;
+        }
     }    
+}
+
+.prods__masInfo{
+    opacity: 0;
+    transition: all .5s;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    border: solid 4px black;
+    border-radius: 15px;
+    padding: 15px;
+    margin-top: 30px;
+    table{
+        margin-top: 80px;
+        margin-bottom: 80px;
+        width: 100%;
+        tr{
+            padding-left: 10px;
+            td{
+                width: 33%;
+                text-align: left;
+                font-size: 35px;
+            }
+        }
+    }
+    h4{
+        font-size: 30px;
+        text-align: center;
+    }
+    video{
+        width: 70%;
+        border: solid 6px black;
+        border-radius: 10px;
+    }
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px){
