--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,6 +11,25 @@
     padding: 0;
 }
 
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+body{
+    animation: fadeIn 1s ease-in-out;
+}
+
+#in_header{
+    animation: fadeIn 0.5s ease-in-out;
+}
+
 #bodymain{
     background: repeating-linear-gradient(
         45deg,
@@ -25,8 +44,13 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 0;
-    padding: 0;
+    margin: 0 !important;
+    padding: 0 !important;
+}
+
+#button-menu{
+    visibility: hidden;
+    position: absolute;
 }
 
 @keyframes logo {
@@ -36,15 +60,16 @@
     100% {rotate: 0deg;}
 }
 
-    #logomain{
-        margin: 0;
-        padding: 0;
-        width: 30%;
-        height: 450px;
-        &:hover{
-            animation: logo 1s ease-in-out;
-        }
+#logomain{
+    margin: 0;
+    padding: 0;
+    width: 450px;
+    height: 450px;
+    &:hover{
+        animation: logo 1s ease-in-out;
     }
+}
+
 
 #titulo-empresa{
     position: absolute;
@@ -61,8 +86,7 @@
     }
 }
 
-.offcanvas-body{
-    position: sticky;
+#main-nav--menu{
     .scrolled{
         background-color: gray;
     }
@@ -77,29 +101,51 @@
     }
 }
 
+#main-nav{
+    position: sticky;
+    top: 20px;
+}
+
 #menu-current-page{
     color: white;
-
 }
 
 
 .cont-login{
-    position: absolute;
-    justify-content: end;
+    position: absolute !important; 
+    justify-content: end !important;
     display: flex;
-    width: 100%;
-    margin-top: 1%;
-    margin-bottom: 24%;
+    a{
+        margin: 2%;
+    }
 }
 
+
 #login-button-principal{
-    width: 60px;
     text-align: center;
+    padding: 8px 20px;
     text-decoration: none;
     color: rgb(97, 97, 97);
-    background-color: rgb(255, 0, 0);
+    background-color: #D32F2F;
     color: white;
     border-radius: 20px;
+}
+
+@media (max-width: 991px){
+    #button-menu {
+        visibility: visible !important;
+        position: relative !important;
+        margin-right: 1%;
+        background-color: gray;
+    }
+    #main-nav--menu ul li a{
+        color: rgb(75, 75, 75);
+        font-size: 20px;
+        &:hover{
+            color: rgb(204, 204, 204);
+            transition: color 0.5s;
+        }
+    }
 }
 
 #header-nav{
@@ -133,6 +179,7 @@
     position: absolute;
     z-index: -1;
     filter: brightness(50%);
+    height: 825px;
     margin: 0;
     padding: 0;
 }
@@ -209,7 +256,7 @@
     text-align: center;
     color: white;
     letter-spacing: 3px;
-    margin-bottom: 50px;
+    margin: 25px 0;
     font-size: 60px;
     font-family: serif;
     font-weight: bold;
@@ -249,3 +296,53 @@
 #comp-related__companies--p3{
     @extend #comp-related__companies--p1 ;
 }
+
+@media screen and (min-width: 1300px) and (max-width: 1400px){
+    
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px){
+    
+    #que-somos{
+        height: 450px;
+    }
+
+    #que-somos__h2{
+        font-size: 40px;
+        padding-top: 20%;
+    }
+
+    #que-somos__p{
+        font-size: 15px;
+        width: 100%;
+        padding-bottom: 20%;
+    }
+
+    #que-somos__foto-fondo{
+        height: 60%;
+        margin: 0;
+        padding: 0;
+    }
+
+    #comp-related__companies--logo1{
+        img{
+            width: 60%;
+        }
+    }
+
+    #comp-related__companies--t1{
+        margin: 25px 0;
+        font-size: 50px;
+    }
+
+    #comp-related__companies--p1{
+        font-size: 17px;
+        margin-bottom: 70px
+    }
+
+    #logomain{
+        width: 300px;
+        height: 300px;
+    }
+
+}    
