listo el responsive a la de la escuela

--- a/css/main.css
+++ b/css/main.css
@@ -191,7 +191,7 @@ nav {
   display: none;
   position: absolute;
   text-align: center;
-  height: 100%;
+  height: 292px;
   color: white;
   transform: translate(0px, -292px); }
   #hondaDatos1 h4, #hondaDatos2 h4, #hondaDatos3 h4, #audiDatos1 h4, #audiDatos2 h4, #audiDatos3 h4, #chevrDatos1 h4, #chevrDatos2 h4, #chevrDatos3 h4, #renaDatos1 h4, #renaDatos2 h4, #renaDatos3 h4, #fordDatos1 h4, #fordDatos2 h4, #fordDatos3 h4, #fiatDatos1 h4, #fiatDatos2 h4, #fiatDatos3 h4, #nissDatos1 h4, #nissDatos2 h4, #nissDatos3 h4 {
@@ -706,18 +706,12 @@ nav {
 
 /*TRANSICIONES Y TRANSFORMACIONES*/
 @media screen and (min-width: 1300px) and (max-width: 1400px) {
-  #tieAut__Main {
-    height: auto; }
-    #tieAut__Main h4 {
-      font-size: 20px; }
-    #tieAut__Main p {
-      font-size: 10px; }
-    #tieAut__Main img {
-      height: 307px; }
+  #tieAut__Main h4 {
+    font-size: 30px; }
+  #tieAut__Main p {
+    font-size: 15px; }
   #hondaImg1, #hondaImg2, #hondaImg3, #audiImg1, #audiImg2, #audiImg3, #chevrImg1, #chevrImg2, #chevrImg3, #renaImg1, #renaImg2, #renaImg3, #fordImg1, #fordImg2, #fordImg3, #fiatImg1, #fiatImg2, #fiatImg3, #nissImg1, #nissImg2, #nissImg3 {
-    height: 200px; }
-    #hondaImg1 img, #hondaImg2 img, #hondaImg3 img, #audiImg1 img, #audiImg2 img, #audiImg3 img, #chevrImg1 img, #chevrImg2 img, #chevrImg3 img, #renaImg1 img, #renaImg2 img, #renaImg3 img, #fordImg1 img, #fordImg2 img, #fordImg3 img, #fiatImg1 img, #fiatImg2 img, #fiatImg3 img, #nissImg1 img, #nissImg2 img, #nissImg3 img {
-      height: 100%; } }
+    height: 292px; } }
 
 #mainC {
   display: grid;
